# codec

./: Cargo.toml  README.md
codec_derive/: Cargo.toml
codec_derive/src/: check.rs  deserialize.rs  lib.rs  serialize.rs
codec_derive/tests/: lib_test.rs
