[package]
name = "codec_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.39", features = ["full", "extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.69"
bytes = "1.5.0"